# aspis

./: .gitattributes  .gitignore  AGENTS.md  ATTRIBUTIONS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  install.ps1  install.sh  pyproject.toml
.aspis/: .gitignore  manifest.json
.aspis/config/: commit-convention.yaml  constitution-checks.yaml  model_catalog.yaml  models.yaml  modes.yaml  project.yaml  purposes.json
.aspis/context/: AGENT_BODY_STANDARD.md  ARCHITECTURE.md  CORE_LOOP.md  CURRENT_STATE.md  DECISIONS.md  DYNAMIC_READINESS.md  IDENTITY.md  RECENT_CHANGES.md  ROADMAP.md
.aspis/current/: active_feature.json
.aspis/research/: model-capability-seed.md  model-scores.chatgpt-raw.txt  runtime-model-detection.md
.aspis/rules/: architecture-constitution.md  system-rules.md
.aspis/templates/: PLAN.md  SPEC.md  TASKS.md  TASK_PACKET.md
.aspis/workflows/: bootstrap.md  build.md  fix.md  plan.md  project-lead-operating-protocol.md  review.md  small-task.md
.claude/: settings.json
.claude/agents/: api-tester.md  bootstrap.md  build-lead.md  catalog-synchronizer.md  clarify.md  claude-author.md  cli-tester.md  committer.md  constitution-checker.md  db-tester.md  dependency-analyzer.md  drift-auditor.md  export-verifier.md  fix-lead.md  general-builder.md  idea-capture.md  opencode-author.md  (+16 more)
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_NOTES_TEMPLATE.md  release.yml
docs/: ARCHITECTURE.md  FIRST-BUILD.md  INSTALL.md  QUICKSTART.md  TEST-PLAN.md  TESTING.md
scripts/: smoke-test.ps1  smoke-test.sh
tests/: conftest.py  test_active_feature.py  test_agent_permissions.py  test_artifact.py  test_assetkinds.py  test_bootstrap.py  test_bootstrap_cli.py  test_brain_gitignore.py  test_build_code_map.py  test_build_registry.py  test_build_state.py  test_catalog.py  test_cli.py  test_commit.py  test_commitmsg.py  test_commits.py  test_consistency.py  test_constitution.py  test_context.py  test_detect.py  test_export.py  test_export_protection.py  test_export_safety.py  test_export_snapshot.py  test_f006_hooks.py  test_f015_e2e.py  test_f020_e2e.py  test_f020_state.py  test_feature_scaffold.py  test_findings.py  test_git_separation.py  test_gitcheck.py  test_global_config.py  test_health.py  test_hook_gates.py  test_hooks.py  test_init_cli.py  test_init_op.py  test_install_ux.py  test_inventory.py  (+31 more)
(+533 files in other folders)
