[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aspis"
description = "ASPIS — the shield for autonomous software production. A file-first, deterministic agentic software factory."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Mahmoud Emad" }]
keywords = ["ai", "agents", "automation", "software-factory", "deterministic", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
]
dependencies = []
dynamic = ["version"]

[project.scripts]
aspis = "aspis.cli:main"

[tool.hatch.version]
path = "src/aspis/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/aspis"]

[dependency-groups]
dev = ["pytest>=8"]
