[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aspis"
description = "ASPIS — Agentic Software Production & Integration System. The shield for agentic software production: a file-first, deterministic agentic software factory."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Mahmoud Emad" }]
keywords = ["ai", "agents", "automation", "software-factory", "deterministic", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "pydantic>=2",
    "pydantic-settings>=2",
    "pyyaml>=6",
]
dynamic = ["version"]

[project.scripts]
aspis = "aspis.cli:main"

[tool.hatch.version]
path = "src/aspis/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/aspis"]

# Lean dev toolchain: format + lint (ruff) and a few smoke tests (pytest).
# Deliberately no coverage/mypy/mutation/property tooling yet — added only if a
# part truly needs it.
[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
